2014-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: If parsing something which contains data
	which can't be utf-8, generate a parse error.

2014-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: handle invalidation of connection while
	getting root proxy.

2014-03-26 Riccardo Mottola <rm@gnu.org>

	* Source/NSProcessInfo.m (determineOperatingSystem):
	uname() on solaris may return a positive value on success, not just 0

2014-03-25  Fred Kiefer <fredkiefer@gmx.de>

	* Tools/NSOperation.m: ([_finish]) fix logic of 'executing' flag.

2014-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Don't open syslog connection until after we have
	forked and closed old descriptors .. fix for bug #41751
	* Headers/Foundation/NSData.h:
	* Source/NSData.m:
	* Source/NSString.m:
	Fix for bug #41626
	* Source/Additions/GSObjCRuntime.m: patch by Mathias Bauer
	for bool encoding/decoding.

2014-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m:
	When generating document with a header containing adjacent non-ascii
	words which need to be encoded, omit the space between those words
	for consistency with the change on Fe 3rd.

2014-02-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDateFormatter.m
	(-initWithDateFormat:allowNaturalLanguage:):
	Use method -setDateFormat: to get correct behaviour.
	* Source/NSDateFormatter.m (-setDateFormat:):
	Use ASSIGNCOPY for _dateFormat.

2014-02-14  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSNotification.h
	* Source/NSNotificationCenter.m
	(-addObserverForName:selector:queue:usingBlock:):
	Added new Mac OS X 10.6 method.

2014-02-14  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSSortDescriptor.h
	* Source/Foundation/NSSortDescriptor.m
	(+sortDescriptorWithKey:ascending:selector:,
	+sortDescriptorWithKey:ascending,
	-[NSSet sortedArrayUsingDescriptors:]): Added missing Mac OS X 10.6
	methods.
